[package]
name = "rectifier"
version = "0.1.0"
edition = "2024"
description = "Trust maintainers. Install the latest GitHub release with one command."
license = "MIT"
repository = "https://github.com/Recon419A/graft"

[[bin]]
name = "graft"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
flate2 = "1"
tar = "0.4"
zip = "2"
tempfile = "3"
libc = "0.2"